--- a/docs/team/tjw0911.md
+++ b/docs/team/tjw0911.md
@@ -1,7 +1,7 @@
 # TJW0911 - Project Portfolio Page
 
-## Overview
-One-stop solution to a cookbook, ingredient tracker and meal prep handler
+## MealCompanion
+One-stop solution to a cookbook, ingredient tracker and meal prep handler!
 
 ## Summary of Contributions
 
@@ -9,24 +9,31 @@ One-stop solution to a cookbook, ingredient tracker and meal prep handler
 https://nus-cs2113-ay2223s2.github.io/tp-dashboard/?search=tjw0911&breakdown=true
 
 ### Enhancements implemented
-Implemented the Add command for adding ingredients of specified quantity
+- Implemented the Add command for adding ingredients of specified quantity to inventory.
 
-Implemented the Remove command for removing ingredients of specified quantity  
+- Implemented the Remove command for removing ingredients of specified quantity from inventory.
 
-Implemented the Clear command to quickly remove all ingredients in storage in shot  
+- Implemented the Clear command to quickly remove all ingredients in inventory in one shot.
 
-Implemented the Make command to remove all the required ingredients needed to make a specified recipe number
-from storage if it is sufficient  
+- Implemented the Make command to remove all the required ingredients needed to make a specified recipe number
+  from storage if there are sufficient ingredients in inventory.
 
-Implemented the Help command to print out the whole command list including the command formats and 
-a brief description of each command
+- Implemented the Help command to print out the whole command list including the command formats and
+  a brief description of each command.
+
+- Implemented the Ingredient and IngredientList classes
 
 ### Contributions to the DG
+- Design of Ingredient Class and the corresponding UML class diagram
+- Implementation of the following commands and their corresponding UML sequence diagram:
+    - Add
+    - Remove
+    - Make
+    - Clear
 
-Wrote about the ingredient class under the design section and created the UML class diagram for ingredients  
-
-Wrote about the add and remove command under the implementation section and created the two UML sequence diagrams for
-add and remove command
+### Contributions to team-based tasks
+- Set up Github issue tracker for v2.0
+- Set up fundamental classes of the project, such as Ingredient and IngredientList
 
 ### Review/mentoring contributions
 Links to PR reviewed:  
@@ -38,4 +45,3 @@ https://github.com/AY2223S2-CS2113T-T09-3/tp/pull/88
 ### Contributions beyond the project team
 Link to bugs reported in other team:
 https://github.com/TJW0911/ped/issues
-
