Changed name in PPP to own full name

--- a/docs/team/tjw0911.md
+++ b/docs/team/tjw0911.md
@@ -1,4 +1,4 @@
-# TJW0911 - Project Portfolio Page
+# Tan Jian Wei - Project Portfolio Page
 
 ## MealCompanion
 One-stop solution to a cookbook, ingredient tracker and meal prep handler!
