--- a/docs/team/tjw0911.md
+++ b/docs/team/tjw0911.md
@@ -45,4 +45,4 @@ Links to PR reviewed:
 
 ### Contributions beyond the project team
 Link to bugs reported in other team:
-https://github.com/TJW0911/ped/issues
+[PED](https://github.com/TJW0911/ped/issues)
