--- a/docs/team/tjw0911.md
+++ b/docs/team/tjw0911.md
@@ -6,7 +6,7 @@ One-stop solution to a cookbook, ingredient tracker and meal prep handler!
 ## Summary of Contributions
 
 ### Code Contributed
-https://nus-cs2113-ay2223s2.github.io/tp-dashboard/?search=tjw0911&breakdown=true
+[Reposense](https://nus-cs2113-ay2223s2.github.io/tp-dashboard/?search=tjw0911&breakdown=true)
 
 ### Enhancements implemented  
 
